Mejoras de APIs para contabilidad